--- a/package.json
+++ b/package.json
@@ -42,5 +42,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "babel-jest": "^30.0.0-beta.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-transform-stub": "^2.0.0"
   }
 }
